--- a/src/main/java/cz/fi/muni/pv168/windows/GuestListDialog.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/GuestListDialog.form
@@ -45,7 +45,7 @@
               <Component id="jScrollPane1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="32" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
