--- a/src/main/java/cz/fi/muni/pv168/windows/GuestWindow.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/GuestWindow.form
@@ -205,7 +205,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="remove guest"/>
+        <Property name="text" type="java.lang.String" value="remove"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jButton3">
