--- a/src/main/java/cz/fi/muni/pv168/windows/AccommodationsDialog.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/AccommodationsDialog.form
@@ -32,6 +32,8 @@
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="comboBoxRooms" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
+                              <Component id="lblAvailable" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" alignment="0" min="-2" pref="306" max="-2" attributes="0"/>
                       </Group>
@@ -56,6 +58,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="comboBoxRooms" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblAvailable" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="120" max="-2" attributes="0"/>
@@ -122,6 +125,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="change accommodation"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblAvailable">
     </Component>
   </SubComponents>
 </Form>
