--- a/src/main/java/cz/fi/muni/pv168/windows/AccommodationsDialog.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/AccommodationsDialog.form
@@ -127,6 +127,9 @@
         <Property name="text" type="java.lang.String" value="change accommodation"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonChangeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="lblAvailable">
     </Component>
