--- a/src/main/java/cz/fi/muni/pv168/windows/GuestDialog.form
+++ b/src/main/java/cz/fi/muni/pv168/windows/GuestDialog.form
@@ -60,6 +60,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Submit"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="nameTxtField">
     </Component>
